--- a/vignettes/pwSEM.Rmd
+++ b/vignettes/pwSEM.Rmd
@@ -30,16 +30,16 @@ The pwSEM package contains functions for conducting piecewise structural equatio
 
 4. If all of the variables in your SEM are normally distributed, then you can also obtain the fits based on standardized variables, resulting in standardized path coefficients.  If any of your variables assume a non-normal distribution then standardized fits are not returned.
 
-5. Optionally, the dependency between any assumed dependent errors is calculated.  This is either a covariance and Pearson correlation for normally distributed variables, or a Spearman correlation otherwise; these are based on the "response" residuals' i.e. based on the actual (observed - predicted) values of the original variables.
+5. Optionally, the dependency between any assumed dependent errors between pairs of observed variables that are the causal children of implicitly marginalized latents or causal parents of implicitly conditioned latents is calculated.  This is either a covariance and Pearson correlation for normally distributed variables, or a Spearman correlation otherwise; these are based on the "response" residuals' i.e. based on the actual (observed - predicted) values of the original variables.
 
 6. The AIC statistic is calculated using the structural equations specified in the equivalent MAG if the equivalent MAG differs from your original causal model.  The AIC statistic is given in Shipley, B. & Douma, J.(2020). Generalized AIC and chi-squared statistics for path models consistent with directed acyclic graphs.  Ecology 101:e02960.
 
 ## pwSEM
 There are three main steps required to fit and output the results of a piecewise SEM:
 
-1. Create a list containing all of the structural equations, following your causal hypothesis (DAG or MAG).  Note that any dependent errors are not included in this first step.  **Note also that you must also include the structural equations for all of the exogenous variables.  People often forget this and, if you do, it will result in an error message**.  These structural equations are constructed using either the gam() or the gamm4() functions of the mgcv package; see Wood, S.N. (2017).  Generalized Additive Models: An introduction with R (2nd edition).  CRC Press (Chapman & Hall).
+1. Create a list containing all of the structural equations, following your causal hypothesis (DAG or MAG).  Note that any dependent errors or selection bias are not included in this first step.  **Note also that you must also include the structural equations for all of the exogenous variables.  People often forget this and, if you do, it will result in an error message**.  These structural equations are constructed using either the gam() or the gamm4() functions of the mgcv package; see Wood, S.N. (2017).  Generalized Additive Models: An introduction with R (2nd edition).  CRC Press (Chapman & Hall).
 
-2. Create output from the pwSEM() function by inputting (1) your list (from step 1), (2) a list of dependent errors (if any), (3) the data set that will be used to fit the data (this must be the same as given inside the gam or gamm4 calls from step 1),  (4) whether you want to use asymptotic probabilities of the d-separation claims or permutation probabilities (for small sample sizes of approximately <100), and (5) how many permutations you require (defaults to 5000).  Note that permutation probabilities will slow down the pwSEM() function.
+2. Create output from the pwSEM() function by inputting (1) your list (from step 1), (2) a list of pairs of variables that are common causal children of implicitly marginalized latents (i.e. dependent errors, if any), (3)a list of pairs of variables that are common causal parents of implicitly conditioned latents (i.e. selection bias, if any),  (4) the data set that will be used to fit the data (this must be the same as given inside the gam or gamm4 calls from step 1),  (5) whether you want to use asymptotic probabilities of the d-separation claims or permutation probabilities (for small sample sizes of approximately <100), and (6) how many permutations you require (defaults to 5000).  Note that permutation probabilities will slow down the pwSEM() function.
 
 3. The output from step 2 contains many objects resulting from the fit, but it is more convenient to use the summary() function to output the results.  Use the argument "structural.equations=TRUE" if you also want the fits of the structural equations to be output.
 
@@ -48,13 +48,15 @@ Therefore, to view the relationship between two variables along any path in the 
 
 Here is the pwSEM function:
 
-pwSEM(sem.functions,dependent.errors = NULL,data,use.permutations = FALSE,n.perms = 5000,do.smooth = FALSE,all.grouping.vars = NULL)
+pwSEM(sem.functions,marginalized.latents = NULL, conditioned.latents = NULL, data,use.permutations = FALSE,n.perms = 5000,do.smooth = FALSE,all.grouping.vars = NULL)
 
 **Arguments**
 
 *sem.functions*: 	A list giving the gamm4 (gamm4 package) or gam (mgcv package) models associated with each variable in the sem, INCLUDING exogenous variables.
 
-*dependent.errors*:	A list giving any dependent errors (correlated error variables).  Each element of this list is a pair of variables whose errors are hypothesized to be dependent (i.e. they have some unknown common cause) separated by two tildes (~). 
+*marginalized.latents*:	A list giving any dependent errors between pairs of observed variables that are generated by common marginalized latents ("free covariance" in covariance-based SEM).  Each element of this list is a pair of variables whose errors are hypothesized to be dependent (i.e. they have some unknown common cause) separated by two tildes (~). For example: list(X~~Y).
+
+*conditioned.latents*:	A list giving any dependent errors between pairs of observed variables that are generated by being common causal parents of common conditioned latents ("selection bias").  Each element of this list is a pair of variables whose errors are hypothesized to be dependent (i.e. they have some unknown common cause) separated by two tildes (~). For example: list(X~~Y).
 
 *data*: 	A data frame containing the empirical data.
 
@@ -70,7 +72,7 @@ pwSEM(sem.functions,dependent.errors = NULL,data,use.permutations = FALSE,n.perm
 
 ### Example 1: dependent endogenous errors, normally distributed variables and no nesting structure in the data
 
-Consider first a causal hypothesis in which X1-->X2-->X3-->X4 and with dependent errors between X2 and X4.  If we assume that all four variables are normally distributed, linearly related, and with mutually independent observations (i.e. no nesting structure that would require a mixed model formulation), then we can model the structural equations using the gam() function of the mgcv package without any smoother terms.  For instance, the first link (X1-->X2) would be modelled as gam(X2~X1,data=...,family=gaussian).  This version of gam is equivalent to the lm() function that is well-known to R users: lm(X2~X1,data=...).  As a note, if you believe that the functional relationship between X2 and X1 is nonlinear, you could instead model this as gam(X2~s(X1),data=...,family=gaussian).  The pwSEM() function will accommodate this formulation but cannot include more complicated formulations like changing the number of knots such as gam(X2~s(X1,k=4),data=...,family=gaussian).  
+Consider first a causal hypothesis in which X1-->X2-->X3-->X4 and with dependent errors between X2 and X4 due to a common implicitly marginalized latent cause.  If we assume that all four variables are normally distributed, linearly related, and with mutually independent observations (i.e. no nesting structure that would require a mixed model formulation), then we can model the structural equations using the gam() function of the mgcv package without any smoother terms.  For instance, the first link (X1-->X2) would be modelled as gam(X2~X1,data=...,family=gaussian).  This version of gam is equivalent to the lm() function that is well-known to R users: lm(X2~X1,data=...).  As a note, if you believe that the functional relationship between X2 and X1 is nonlinear, you could instead model this as gam(X2~s(X1),data=...,family=gaussian).  The pwSEM() function will accommodate this formulation but cannot include more complicated formulations like changing the number of knots such as gam(X2~s(X1,k=4),data=...,family=gaussian).  
 
 Here are the three steps, using the "sim_normal.no.nesting" data set that is included with the pwSEM package:
 
@@ -91,7 +93,7 @@ Notice that the first model in the list is for X1, which is an exogenous variabl
 STEP 2: call the pwSEM function
 
 ```{r}
-out<-pwSEM(sem.functions=my.list,dependent.errors=list(X4~~X2),
+out<-pwSEM(sem.functions=my.list,marginalized.latents=list(X4~~X2),
   data=sim_normal.no.nesting,use.permutations = TRUE,n.perms=5000,do.smooth=FALSE,all.grouping.vars = NULL)
 ```
 
@@ -99,13 +101,15 @@ The first argument gives the list containing the structural equations.
 
 The second argument gives a list containing any dependent errors using the ~~ operator to specify these.  In our example there are dependent errors between X4 and X2.  If this argument is not given then the default is to assume no dependent errors.  If there are more than one pair of dependent errors then you would include each in the list, separated by a comma.
 
-The third argument gives the name of the data set to be used when fitting the structural equations and this must the same name as specified in step 1.
+Note that the argument conditioned.latents= is missing in this example; by default, both the marginalized.latents= and marginalized.latents= arguments have a NULL value.
 
-The fourth argument specifies if you want to use the asymptotic probability values of the generalized covariance statistic (the default) or the permutation probabilities.
+The next argument gives the name of the data set to be used when fitting the structural equations and this must the same name as specified in step 1.
 
-The fifth argument gives the number of permutations required for the permutation version (defaults to 5000).
+The next argument specifies if you want to use the asymptotic probability values of the generalized covariance statistic (the default) or the permutation probabilities.
 
-The sixth argument takes a logical value (TRUE/FALSE) specifying if you want to use regression smoothers (thus generalized additive or mixed generalized additive models) when getting the residuals for the d-separation tests.  The default is FALSE.  Note that only the default number of knots chosen by gam() or gamm4() can be used by pwSEM, and this might throw up an error message. 
+The next argument gives the number of permutations required for the permutation version (defaults to 5000).
+
+The next argument takes a logical value (TRUE/FALSE) specifying if you want to use regression smoothers (thus generalized additive or mixed generalized additive models) when getting the residuals for the d-separation tests.  The default is FALSE.  Note that only the default number of knots chosen by gam() or gamm4() can be used by pwSEM, and this might throw up an error message. 
 
 STEP 3: call the summary
 
@@ -118,7 +122,7 @@ This outputs the causal graph and (if it differs from the original causal graph)
 If you include the argument "structural.equations=TRUE" then the fitted regressions of the structural equations are also output.  If all of the variables are normally distributed (as is the case here) then the standardized versions of the structural equations are also output. Note that, when the equivalent MAG or DAG differs from the original causal graph (as happens in this example), the structural equation of the equivalent graph is output and the added terms in the equivalent structural equation are noted in the output.  When reporting and interpreting the SEM you would ignore the slopes of these added terms.
 Finally, if there are dependent errors, then the covariances and Pearson correlations of these dependent errors are output if the variables are normally distributed (as is the case in this example) or the Spearman correlations otherwise.
 
-### Example 2: dependent endogenous errors, Poisson distributed variables and no nesting structure in the data
+### Example 2: dependent endogenous errors  from marginalized latents, Poisson distributed variables and no nesting structure in the data
 
 The only difference with the first example is in changing the "family=" argument in the gam() function.  Everything else remains the same.
 ```{r}
@@ -126,8 +130,7 @@ my.list<-list(mgcv::gam(X1~1,data=sim_poisson.no.nesting,family=gaussian),
          mgcv::gam(X2~X1,data=sim_poisson.no.nesting,family=poisson),
          mgcv::gam(X3~X2,data=sim_poisson.no.nesting,family=poisson),
          mgcv::gam(X4~X3,data=sim_poisson.no.nesting,family=poisson))
-out<-pwSEM(sem.functions=my.list,dependent.errors=list(X4~~X2),
-    data=sim_poisson.no.nesting,use.permutations = TRUE,n.perms=10000)
+out<-pwSEM(sem.functions=my.list,marginalized.latents=list(X4~~X2), data=sim_poisson.no.nesting,use.permutations = TRUE,n.perms=10000)
 summary(out,structural.equations=TRUE)
 ```
 Since each dependent variable in the model is now Poisson distributed, the slopes of the structural equations are for the ln-transformed values since this is the link function for Poisson distributed variables in a generalized linear model.  If you want to express the structural equations in the original scale of these variables, you must back-transform.  For example, the second structural equation is (implicitly) ln(X2)=0.25+0.17X1 even though the ln-transform isn't explicit.  To get this structural equation in the original scale of X2 you would do: exp(0.25)*exp(0.17X1).
@@ -150,9 +153,9 @@ my.list<-list(gamm4::gamm4(X1~1,random=~(1|group),data=sim_normal.with.nesting,f
          gamm4::gamm4(X3~X2,random=~(1|group),data=sim_normal.with.nesting,family=gaussian),
          gamm4::gamm4(X4~X3,random=~(1|group),data=sim_normal.with.nesting,family=gaussian))
 
-out<-pwSEM(sem.functions=my.list,dependent.errors=list(X4~~X2),
-          data=sim_normal.with.nesting,use.permutations = TRUE,
-          do.smooth=TRUE,all.grouping.vars=c("group"))
+out<-pwSEM(sem.functions=my.list,marginalized.latents=list(X4~~X2),
+   data=sim_normal.with.nesting,use.permutations = TRUE,
+   do.smooth=TRUE,all.grouping.vars=c("group"))
 summary(out,structural.equations=TRUE)
 ```
 
